--- a/FAZA_3.ipynb
+++ b/FAZA_3.ipynb
@@ -530,7 +530,29 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "dt_base = DecisionTreeClassifier(\n",
+    "    criterion='entropy',\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "param_grid_dt = {\n",
+    "    \"max_depth\": [2, 3, 5, 7, 9, 12, None],\n",
+    "    \"min_samples_split\": [2, 5, 10, 20],\n",
+    "    \"min_samples_leaf\": [1, 2, 4, 6, 8],\n",
+    "}\n",
+    "\n",
+    "grid_dt = GridSearchCV(\n",
+    "    estimator=dt_base,\n",
+    "    param_grid=param_grid_dt,\n",
+    "    cv=5,\n",
+    "    scoring=\"accuracy\",\n",
+    "    n_jobs=-1\n",
+    ")"
+   ],
    "id": "b8b14c3111dc4180",
    "outputs": [],
    "execution_count": null
@@ -538,7 +560,11 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "grid_dt.fit(X_train_tr, y_train)\n",
+    "\n",
+    "best_dt = grid_dt.best_estimator_"
+   ],
    "id": "fc3e64b0f8528fb0",
    "outputs": [],
    "execution_count": null
@@ -546,7 +572,11 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "print(\"Best hyperparameters for DecisionTree:\")\n",
+    "print(grid_dt.best_params_)\n",
+    "print(\"CV accuracy (mean):\", grid_dt.best_score_)"
+   ],
    "id": "20d6c3421c8e54d5",
    "outputs": [],
    "execution_count": null
@@ -554,16 +584,129 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "y_train_best_dt = best_dt.predict(X_train_tr)\n",
+    "y_test_best_dt  = best_dt.predict(X_test_tr)\n",
+    "\n",
+    "print_metrics(\"Best DecisionTreeClassifier (Train)\",  y_train, y_train_best_dt)\n",
+    "print_metrics(\"Best DecisionTreeClassifier (Test)\",  y_test, y_test_best_dt)"
+   ],
    "id": "7f79d489b65a29c1",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 3.3 B",
+   "id": "5352147535b30b25"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators=200,\n",
+    "    criterion=\"entropy\",\n",
+    "    max_depth=9,\n",
+    "    min_samples_split=20,\n",
+    "    min_samples_leaf=8,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "rf.fit(X_train_tr, y_train)\n",
+    "\n",
+    "y_train_rf = rf.predict(X_train_tr)\n",
+    "y_test_rf  = rf.predict(X_test_tr)"
+   ],
    "id": "c434ec43497de28a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print_metrics(\"Best DecisionTreeClassifier (Train)\",  y_train, y_train_best_dt)\n",
+    "print_metrics(\"Best DecisionTreeClassifier (Test)\",  y_test, y_test_best_dt)\n",
+    "\n",
+    "print_metrics(\"RandomForestClassifier (Train)\",  y_train, y_train_rf)\n",
+    "print_metrics(\"RandomForestClassifier (Test)\",  y_test, y_test_rf)"
+   ],
+   "id": "241ac04b7787cabb",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 3.3 C",
+   "id": "5dcda3f7895081e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cv_scores_rf = cross_val_score(\n",
+    "    rf,\n",
+    "    X_train_tr,\n",
+    "    y_train,\n",
+    "    cv=5,\n",
+    "    scoring=\"accuracy\",\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "print(\"CV accuracy scores (RF):\", cv_scores_rf)\n",
+    "print(\"Mean CV accuracy:\", cv_scores_rf.mean())\n",
+    "print(\"Std CV accuracy :\", cv_scores_rf.std())"
+   ],
+   "id": "4529b9eee91cf9ff",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 3.3 D",
+   "id": "a0ac428359cfea7a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "train_acc_rf = accuracy_score(y_train, y_train_rf)\n",
+    "test_acc_rf  = accuracy_score(y_test,  y_test_rf)\n",
+    "\n",
+    "train_prec_rf = precision_score(y_train, y_train_rf, average='binary')\n",
+    "test_prec_rf  = precision_score(y_test,  y_test_rf, average='binary')\n",
+    "\n",
+    "train_rec_rf = recall_score(y_train, y_train_rf, average='binary')\n",
+    "test_rec_rf  = recall_score(y_test,  y_test_rf, average='binary')"
+   ],
+   "id": "1bcc57be15c2fd12",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print(\"RandomForest – TRAIN vs TEST comparison:\")\n",
+    "print(f\"Accuracy train = {train_acc_rf:.3f}, test = {test_acc_rf:.3f}, diff = {train_acc_rf - test_acc_rf:.3f}\")\n",
+    "print(f\"Precision train = {train_prec_rf:.3f}, test = {test_prec_rf:.3f}, diff = {train_prec_rf - test_prec_rf:.3f}\")\n",
+    "print(f\"Recall   train = {train_rec_rf:.3f}, test = {test_rec_rf:.3f}, diff = {train_rec_rf - test_rec_rf:.3f}\")\n",
+    "\n",
+    "print(\"\\nCross-validation (cv=5) – RF:\")\n",
+    "print(\"CV scores       :\", cv_scores_rf)\n",
+    "print(\"Mean CV accuracy:\", cv_scores_rf.mean())\n",
+    "print(\"Std  CV accuracy:\", cv_scores_rf.std())"
+   ],
+   "id": "35adbcf2f33b362e",
    "outputs": [],
    "execution_count": null
   }
